<resources>
    <string name="app_name">achidaNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">achidaNews</string>
    <string name="nav_header_subtitle">my daily news briefing</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_english_news">Selected English News</string>
    <string name="menu_country_news">My Country News</string>
    <string name="menu_headlines">Headlines</string>
    <string name="menu_business">Business</string>
    <string name="menu_entertainment">Entertainment</string>
    <string name="menu_health">Health</string>
    <string name="menu_science">Science</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_guardian">TheGuardian</string>
    <string name="menu_latest">Reputable sources</string>
    <string name="menu_politics">Politics</string>
    <string name="menu_football">Football</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_attribution">Attribution</string>
    <string name="menu_connection">No connection</string>
    <string name="share_text">Search for achidaNews app by Sirus Laia on Google Play Store</string>
    <string name="feedback_mailto" translatable="false">mailto:laia.sirus@gmail.com</string>
    <string name="feedback_subject">My feedback to achidaNews app</string>
    <string name="section_football" translatable="false">football</string>
    <string name="section_politics" translatable="false">politics</string>
    <string name="show_fields" translatable="false">byline,shortUrl,thumbnail</string>
    <string name="order_by_newest" translatable="false">newest</string>
    <string name="category_business" translatable="false">business</string>
    <string name="category_entertainment" translatable="false">entertainment</string>
    <string name="category_health" translatable="false">health</string>
    <string name="category_science" translatable="false">science</string>
    <string name="category_sports" translatable="false">sports</string>
    <string name="category_technology" translatable="false">technology</string>
    <string name="request_sources" translatable="false">abc-news,bbc-news,cnn,reuters,the-new-york-times</string>
    <string name="request_query" translatable="false">q</string>
    <string name="request_language" translatable="false">language</string>
    <string name="request_sortBy" translatable="false">sortBy</string>
    <string name="request_country" translatable="false">country</string>
    <string name="request_category" translatable="false">category</string>
    <string name="country_default" translatable="false">gb</string>
    <string name="language_default" translatable="false">en</string>
    <string name="about_the_app">About GuNews</string>
    <string name="about_me_header">About Me</string>
    <string name="about_me">I\'m new to Android programming and the Udacity\'s nanodegree program has helped me getting started.\n\nPlease give me feedback by sending feedback in the app Settings.</string>
    <string name="attribution"><b>News source</b>: The main news are from theguardian.com, one of the few trusted news sources nowadays. <i>So guaranteed no fake news</i>.\n\nThe alternative news are from various news outlet all over the world as provided by newsapi.org (Be careful to navigate. You may also see news from non-reputable newspapers that are known for their bombastic, click-baiting and fake-news prone headlines).\n\n\Please also note that the alternative news often show empty spaces for images which should be there but contain magically white space.\n\n<b>Code source</b>: The app used the example app by Anitaa Murthy (https://github.com/anitaa1990/PagingLibrary-Sample) as starting point. Some particular solutions are from stockoverflow.com and clearly referenced in the code.\n\n<b>Image</b>: Earth by WikiImages (https://pixabay.com/photos/earth-soil-creep-moon-lunar-surface-11014 )</string>
    <string name="no_connection">No Internet.\n\nPlease check the Internet connection.\nTurn on WiFi or mobile data.</string>
    <string name="content_description">News related image</string>
    <string name="date_format" formatted="false">%s at %s by</string>
    <string name="not_available">N/A</string>
    <string name="search_tips">You can refine the search results by going to <b>Settings</b> and set the order by to <b>relevance</b>, <b>newest</b> or <b>oldest</b>. Use double quote (<b>\"</b>) for exact search word order.</string>
    <string name="settings_news_list">News list setting</string>
    <string name="settings_news_search">News search settings</string>
    <string name="settings_news_selected">Selected news settings</string>
    <string name="settings_show_images_summary">Switch off to hide images</string>
    <string name="settings_show_images_title">Show images in the news list</string>
    <string name="settings_show_images_key">showImages</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <string name="settings_order_by_newest_label">Newest first</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest first</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_label">Order the news by</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>
    <string name="settings_sort_by_relevance_label">Relevancy</string>
    <string name="settings_sort_by_relevance_value">relevancy</string>
    <string name="settings_sort_by_newest_label">Newest</string>
    <string name="settings_sort_by_newest_value">publishedAt</string>
    <string name="settings_sort_by_popularity_label">Popularity</string>
    <string name="settings_sort_by_popularity_value">popularity</string>
    <string name="settings_sort_by_label">Sort the news by</string>
    <string name="settings_sort_by_key" translatable="false">sortBy</string>
    <string name="settings_sort_by_default" translatable="false">publishedAt</string>
    <string name="settings_language_label">Language for the news query</string>
    <string name="settings_language_key" translatable="false">language</string>
    <string name="settings_language_default" translatable="false">en</string>
    <string name="settings_language_en_label">English</string>
    <string name="settings_language_en_value" translatable="false">en</string>
    <string name="settings_language_ar_label">العربية</string>
    <string name="settings_language_ar_value" translatable="false">ar</string>
    <string name="settings_language_de_label">Deutsch</string>
    <string name="settings_language_de_value" translatable="false">de</string>
    <string name="settings_language_es_label">Español</string>
    <string name="settings_language_es_value" translatable="false">es</string>
    <string name="settings_language_fr_label">Français</string>
    <string name="settings_language_fr_value" translatable="false">fr</string>
    <string name="settings_language_he_label">עברית</string>
    <string name="settings_language_he_value" translatable="false">he</string>
    <string name="settings_language_it_label">Italiano</string>
    <string name="settings_language_it_value" translatable="false">it</string>
    <string name="settings_language_nl_label">Nederlands</string>
    <string name="settings_language_nl_value" translatable="false">nl</string>
    <string name="settings_language_no_label">Norsk</string>
    <string name="settings_language_no_value" translatable="false">no</string>
    <string name="settings_language_pt_label">Português</string>
    <string name="settings_language_pt_value" translatable="false">pt</string>
    <string name="settings_language_ru_label">русский</string>
    <string name="settings_language_ru_value" translatable="false">ru</string>
    <string name="settings_language_se_label">Davvisámegiella</string>
    <string name="settings_language_se_value" translatable="false">se</string>
    <string name="settings_language_zh_label">中文</string>
    <string name="settings_language_zh_value" translatable="false">zh</string>
    <string name="settings_country_label">Show news from country</string>
    <string name="settings_country_key" translatable="false">country</string>
    <string name="settings_country_default" translatable="false">gb</string>
    <string name="settings_country_ae_label">United Arab Emirates</string>
    <string name="settings_country_ar_label">Argentina</string>
    <string name="settings_country_at_label">Austria</string>
    <string name="settings_country_au_label">Australia</string>
    <string name="settings_country_be_label">Belgium</string>
    <string name="settings_country_bg_label">Bulgaria</string>
    <string name="settings_country_br_label">Brazil</string>
    <string name="settings_country_ca_label">Canada</string>
    <string name="settings_country_ch_label">Switzerland</string>
    <string name="settings_country_cn_label">China</string>
    <string name="settings_country_co_label">Colombia</string>
    <string name="settings_country_cu_label">Cuba</string>
    <string name="settings_country_cz_label">Czechia</string>
    <string name="settings_country_de_label">Deutschland</string>
    <string name="settings_country_eg_label">Eqypt</string>
    <string name="settings_country_fr_label">France</string>
    <string name="settings_country_gb_label">United Kingdom</string>
    <string name="settings_country_gr_label">Greece</string>
    <string name="settings_country_hk_label">Hong Kong</string>
    <string name="settings_country_hu_label">Hungary</string>
    <string name="settings_country_id_label">Indonesia</string>
    <string name="settings_country_ie_label">Ireland</string>
    <string name="settings_country_il_label">Israel</string>
    <string name="settings_country_in_label">India</string>
    <string name="settings_country_it_label">Italia</string>
    <string name="settings_country_jp_label">Japan</string>
    <string name="settings_country_kr_label">Korea</string>
    <string name="settings_country_lt_label">Lithuania</string>
    <string name="settings_country_lv_label">Latvia</string>
    <string name="settings_country_ma_label">Morocco</string>
    <string name="settings_country_mx_label">Mexico</string>
    <string name="settings_country_my_label">Malaysia</string>
    <string name="settings_country_ng_label">Nigeria</string>
    <string name="settings_country_nl_label">Netherlands</string>
    <string name="settings_country_no_label">Norway</string>
    <string name="settings_country_nz_label">New Zealand</string>
    <string name="settings_country_ph_label">Philippines</string>
    <string name="settings_country_pl_label">Poland</string>
    <string name="settings_country_pt_label">Portugal</string>
    <string name="settings_country_ro_label">Romania</string>
    <string name="settings_country_rs_label">Serbia</string>
    <string name="settings_country_ru_label">Russian Federation</string>
    <string name="settings_country_sa_label">Saudi Arabia</string>
    <string name="settings_country_se_label">Sweden</string>
    <string name="settings_country_sg_label">Singapore</string>
    <string name="settings_country_si_label">Slovenia</string>
    <string name="settings_country_sk_label">Slovakia</string>
</resources>