<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/settings_news_list">
        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/settings_show_images_key"
            app:summary="@string/settings_show_images_summary"
            app:title="@string/settings_show_images_title" />
        <ListPreference
            android:title="Country"
            app:defaultValue="@string/settings_country_default"
            app:entries="@array/settings_country_labels"
            app:entryValues="@array/settings_country_values"
            app:key="@string/settings_country_key"
            app:title="@string/settings_country_label"
            app:useSimpleSummaryProvider="true" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/settings_news_search">
        <ListPreference
            android:title="Sort by"
            app:defaultValue="@string/settings_sort_by_default"
            app:entries="@array/settings_sort_by_labels"
            app:entryValues="@array/settings_sort_by_values"
            app:key="@string/settings_sort_by_key"
            app:title="@string/settings_sort_by_label"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:title="Language"
            app:defaultValue="@string/settings_language_default"
            app:entries="@array/settings_language_labels"
            app:entryValues="@array/settings_language_values"
            app:key="@string/settings_language_key"
            app:title="@string/settings_language_label"
            app:useSimpleSummaryProvider="true" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
